Use dotnet run instead of dotnet test to make test pass

--- a/.github/workflows/api-build.yaml
+++ b/.github/workflows/api-build.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Test with the dotnet CLI
-        run: dotnet test --no-build
+        run: dotnet run
 
   dev_build_and_publish:
     runs-on: ubuntu-latest
