--- a/.github/workflows/api-integration-test.yaml
+++ b/.github/workflows/api-integration-test.yaml
@@ -32,4 +32,4 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Test with the dotnet CLI
-        run: dotnet test --no-build
+        run: dotnet run
