--- a/apps/api-server/BingoTodo.IntegrationTests/BingoTodo.IntegrationTests.csproj
+++ b/apps/api-server/BingoTodo.IntegrationTests/BingoTodo.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="MSTest.Sdk/3.10.2">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -11,15 +11,19 @@
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.9.4" />
     <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="3.9.4" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
-    <PackageReference Include="xunit" Version="2.9.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="xunit.v3" Version="3.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\Api\BingoTodo.Api.csproj" />
+  </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
